stretch: added an item component, fixed the get route by actually sending the data recieved from the database

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,5 @@
 table {
-  background-color: #dddddd;
+  margin-top: 0;
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
@@ -7,13 +7,14 @@ table {
 
 td,
 th {
-  border: 1px solid #dddddd;
+  border: 3px solid black;
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(even) {
   background-color: #dddddd;
+  border: 3px solid black;
 }
 
 .App {
@@ -47,18 +48,4 @@ tr:nth-child(even) {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-}
-
-.app-btn {
-  background-color: #033076;
-  border: none;
-  border-radius: 3px;
-  color: white;
-  padding: 5px 12px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
 }
